<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<!--parent> <groupId>org.apache.opennlp</groupId> <artifactId>opennlp</artifactId> 
		<version>1.5.3</version> </parent -->
	<groupId>edu.brandeis.cs.lapps</groupId>
	<artifactId>opennlp-web-service</artifactId>
	<version>0.0.3-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>Web Services wrapping opennlp</name>
	<description>
	Publish API for the LAPPS exchange data structure (LEDS), the thing that will be serialized to from JSON-LD.
	Provide converter for the OpenNLP one-per-line format to LEDS.
	</description>

	<properties>
		<lapps.version>1.0.1</lapps.version>
		<lapps.core.version>1.1.0</lapps.core.version>
		<stanford.version>3.3.0</stanford.version> <!-- Was 1.3.5 -->
		<vocabulary.version>0.9.3</vocabulary.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.apache.opennlp</groupId>
			<artifactId>opennlp-tools</artifactId>
			<version>1.5.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.opennlp</groupId>
			<artifactId>opennlp-uima</artifactId>
			<version>1.5.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.opennlp</groupId>
			<artifactId>opennlp-maxent</artifactId>
			<version>3.0.3</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
		</dependency>

		<!-- LappsGrid dependencies -->
		<dependency>
			<groupId>org.lappsgrid</groupId>
			<artifactId>api</artifactId>
			<version>${lapps.version}</version>
		</dependency>

		<dependency>
			<groupId>org.lappsgrid</groupId>
			<artifactId>core</artifactId>
			<version>${lapps.core.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lappsgrid</groupId>
			<artifactId>discriminator</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.anc.lapps</groupId>
			<artifactId>util</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.anc.lapps</groupId>
			<artifactId>serialization</artifactId>
			<version>0.12.0</version>
		</dependency>
        <dependency>
            <groupId>org.lappsgrid</groupId>
            <artifactId>vocabulary</artifactId>
            <version>${vocabulary.version}</version>
        </dependency>
		<dependency>
			<groupId>org.lappsgrid</groupId>
			<artifactId>service-grid-libs</artifactId>
			<version>1.1.0</version>
		</dependency>
		<!-- LappsGrid dependencies -->


		<dependency>
			<groupId>com.sun.faces</groupId>
			<artifactId>jsf-api</artifactId>
			<version>2.1.7</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>com.sun.faces</groupId>
			<artifactId>jsf-impl</artifactId>
			<version>2.1.7</version>
		</dependency>
		<dependency>
			<groupId>org.anc</groupId>
			<artifactId>common</artifactId>
			<version>3.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.5</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-wordnet</artifactId>
			<version>3.3.0</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>opennlp-web-service#${project.version}</finalName>
		<plugins>
            
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass></mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
            
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.4.2</version>
                <configuration>
                    <tagBase>http://eldrad.cs-i.brandeis.edu:6061/nexus/content/repositories/releases/</tagBase>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
            </plugin>
            
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.anc.maven.plugins</groupId>
                <artifactId>anc-maven-plugin</artifactId>
                <version>1.0.4</version>
                <executions>
                    <execution>
                        <id>version-class</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>version-class</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <package>edu.brandeis.cs.lappsgrid</package>
                </configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
					<!-- mvn test: java.lang.OutOfMemoryError: Java heap space -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.10</version>
				<configuration>
					<scanIntervalSeconds>10</scanIntervalSeconds>
					<connectors>
						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
							<port>4040</port>
							<maxIdleTime>60000</maxIdleTime>
						</connector>
					</connectors>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
